@@ -56,6 +56,7 @@ add_library("${RW_LIB_TARGET_NAME}" SHARED
     "lif/glfw/GlfwManager.cpp"
     "lif/glfw/Window.cpp"
     "lif/vulkan/BaseObject.cpp"
+    "lif/vulkan/CommandPool.cpp"
     "lif/vulkan/DebugUtilsMessenger.cpp"
     "lif/vulkan/DeviceBase.cpp"
     "lif/vulkan/FrameBuffer.cpp"
@@ -80,7 +81,7 @@ add_library("${RW_LIB_TARGET_NAME}" SHARED
     "ui/BaseWindow.cpp"
     "utils/Logger.cpp"
     "utils/SettingsManager.cpp"
-)
+ )
 set_target_properties(${RW_LIB_TARGET_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 set_target_properties(${RW_LIB_TARGET_NAME} PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
 
